# seg-prostate-mri

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
configs/: config.yaml
src/callbacks/: visualize_batch.py
src/dataset/: augment.py  pl_dataset.py  preprocess.py
src/train/: pl_wrap.py  run.py
